styles.css
body { /* Sets body element's width to 100% of its parent and height to 100% of the viewport height. Remove any default margin. */
    width: 100%;
    height: 100vh;
    margin: 0;
    background-color: #1b1b32;
    color: #f5f6f7;
    font-family: Tahoma;
    font-size: 16px;
  }
  
  h1, p {
    margin: 1em auto; /* Adds space around 'h1' and 'p' elements and centers them */
    text-align: center; /*Center aligns the text within the elements */
  }
  
  form {
    width: 60vw; /* Set the form width to 60% of the viewport width. */
    max-width: 500px; /* limits the width */
    min-width: 300px; /* limits the width *
    margin: 0 auto; /* Center-algn the forms within its container */
    padding-bottom: 2em;
  }
  
  fieldset {
    border: none; /*removes the default fieldset border */
    padding: 2rem 0;
    border-bottom: 3px solid #3b3b4f;
  }
  
  fieldset:last-of-type { /* removes the bottom border below the bio field */
    border-bottom: none;
  }
  
  label {
    display: block;
    margin: 0.5rem 0;
  }
  
  input,
  textarea,
  select {
    margin: 10px 0 0 0;
    width: 100%;
    min-height: 2em;
  }
  
  input, textarea {
    background-color: #0a0a23;
    border: 1px solid #0a0a23; 
    color: #ffffff;
  }
  
  .inline {
    width: unset; /*removes earlier rule which set all the input elements to width: 100% */
    margin: 0 0.5em 0 0;
    vertical-align: middle;
  }
  
  input[type="submit"] {
    display: block;
    width: 60%;
    margin: 1em auto;
    height: 2em;
    font-size: 1.1rem;
    background-color: #3b3b4f;
    border-color: white;
    min-width: 300px;
  }
  
  input[type="file"] {
    padding: 1px 2px;
  }
  
  a {
    color: #dfdfe2;
  }

